# evaluate_text_ann_transfer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CI.yml
src/text_ann_transfer/: __init__.py
tests/: test_algos.py  test_example.py
